# llp_lab1

./: .gitignore  CMakeLists.txt  README.md
include/: database.h  file.h  graph.h  query.h
src/: database.c  file.c  graph.c  main.c  query.c
test/: generator.c  generator.h  tests.c  tests.h
